# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = jsim
description = Simulation environment for SAR
author = iwishiwasaneagle
author_email = jh.ewers@gmail.com
license = GPL-3.0-or-later
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/iwishiwasaneagle/jsim/
# Add here related links, for example:
project_urls =
    Documentation = "https://iwishiwasaneagle.github.io/jsim/"
    Source = "https://github.com/iwishiwasaneagle/jsim"
    Changelog = "https://iwishiwasaneagle.github.io/jsim/changelog.html"
    Tracker = "https://github.com/iwishiwasaneagle/jsim/issues"
    Download = "https://github.com/iwishiwasaneagle/jsim/releases"
    Twitter = "https://twitter.com/jhewers"

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = Linux

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: Unix
    Topic :: Scientific/Engineering



[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
# python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version<"3.8"
    loguru==0.6.0
    matplotlib==3.5.1
    numpy==1.22.1
    tqdm==4.62.3

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install jsim[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
# pip install -e ".[test]"
test =
    setuptools
    pytest
    pytest-cov
    tox

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = jsim.module:function
# For example:
# console_scripts =
#     fibonacci = jsim.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this pytest issue.
addopts =
    --cov jsim --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
per-file-ignores = "**/__init__.py:F401" # Unused import errors

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.1.1
package = jsim
extensions =
    markdown
    pre_commit


[mypy]
ignore_missing_imports = True
